<resources>
    <string name="app_name">Tip Calc</string>
    <string name="tip">Tip: %s</string>
    <string name="bill">Bill: %s</string>
    <string name="enter_the_bill">Enter the bill</string>
    <string name="enter_the_tip">Enter tip in %</string>
    <string name="default_tip">15.00</string>
    <string name="label_tip_in_percentage">Tip in %</string>
    <string name="label_bill">Bill</string>
</resources>